# tosklight

./: .eslintrc.js  .gitignore  .releaserc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REFACTORING-HANDOFF.md  TODO.md  build  dev  index.js  package-lock.json  package.json  playwright.config.ts  test  todos-done.md  webpack.config.js  webpack.config.ts
apps/control-ui/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/control-ui/src-tauri/capabilities/: default.json
apps/control-ui/src-tauri/icons/: icon.icns
apps/control-ui/src-tauri/src/: main.rs
apps/hardware-controls/src-tauri/: Cargo.toml  tauri.conf.json
apps/hardware-controls/src-tauri/capabilities/: default.json
apps/hardware-controls/src-tauri/icons/: icon.icns
apps/hardware-controls/src-tauri/src/: main.rs  osc.rs
crates/application/: Cargo.toml
crates/application/src/: action.rs  event.rs  lib.rs  lossless_json.rs  playback.rs
crates/application/src/active_show/: mod.rs  model.rs  objects.rs  ports.rs  route.rs  service.rs  tests.rs  undo.rs
crates/application/src/event/: bus.rs  mod.rs  model.rs  routing.rs  subscription.rs  tests.rs
crates/application/src/fixture_position/: mod.rs  tests.rs
crates/application/src/lossless_json/: tests.rs
crates/application/src/macro_runtime/: host.rs  http.rs  mod.rs  model.rs  service.rs
crates/application/src/managed_assets/: mod.rs  test_support.rs  tests.rs
crates/application/src/mvr_import/: mod.rs  model.rs  plan.rs  projection.rs  service.rs
crates/application/src/output_runtime/: mod.rs  model.rs  ports.rs  service.rs  tests.rs
crates/application/src/playback/: command.rs  event.rs  group_id.rs  operation.rs  ports.rs  projection.rs  service.rs  service_tests.rs  transition_set.rs
crates/application/src/playback_topology/: candidate.rs  change.rs  map_existing.rs  mod.rs  model.rs  page.rs  page_actions.rs  ports.rs  replay.rs  service.rs  stored.rs  tests.rs  validation.rs
crates/application/src/programming/: capture_mode_projection.rs  command.rs  cue_active_show.rs  cue_active_show_tests.rs  cue_deletion.rs  cue_list_resolution.rs  cue_recording.rs  cue_recording_service_tests.rs  cue_transfer.rs  event.rs  group_active_show.rs  group_active_show_tests.rs  group_management.rs  group_recording.rs  lifecycle.rs  lifecycle_projection.rs  live_state_tests.rs  mod.rs  operation.rs  ports.rs  preload_lifecycle.rs  preload_playback_queue_projection.rs  preload_values_action.rs  preload_values_projection.rs  preset_active_show.rs  preset_recall.rs  preset_recall_plan.rs  preset_recording.rs  priority.rs  projection.rs  service.rs  tests.rs  values_action.rs  values_projection.rs
crates/application/src/scheduling/: mod.rs  tests.rs
crates/application/src/selective_import/: identity.rs  mod.rs  model.rs  ports.rs  service.rs
crates/application/src/show_compiler/: mod.rs  objects.rs  patch.rs  prepare.rs
crates/application/src/show_patch/: legacy_profiles.rs  mod.rs  model.rs  ports.rs  prepare.rs  profiles.rs  projection.rs  query.rs  record_index.rs  records.rs  replay.rs  service.rs  validation.rs
crates/application/src/speed_group/: mod.rs  model.rs  planning.rs  ports.rs  replay.rs  service.rs  tests.rs
crates/application/src/timeline/: mod.rs  tests.rs
crates/control/: Cargo.toml
crates/control/src/: input.rs  lib.rs  midi.rs  model.rs  osc.rs  rtp_midi.rs  speed.rs  tests.rs  timecode.rs
crates/control/src/speed/: controller.rs  mod.rs  model.rs  tests.rs
crates/engine/: Cargo.toml
crates/engine/src/: contribution.rs  contribution_batch.rs  controls.rs  engine.rs  fixture.rs  legacy_projection.rs  lib.rs  lifecycle.rs  model.rs  move_in_black.rs  move_in_black_candidate.rs  move_in_black_runtime.rs  playback.rs  playback_batch.rs  playback_exclusion.rs  profile_blackout.rs  profile_color.rs  profile_encoding.rs  profile_projection.rs  profile_projection_plan.rs  profile_value_index.rs  programmer_fade.rs  programmer_resolution.rs  render.rs  resolution.rs  runtime_generation.rs  safety.rs  visualization.rs
crates/engine/src/tests/: contribution_batches.rs  highlight_looks.rs  highlight_masters.rs  lifecycle.rs  masters.rs  mod.rs  move_in_black.rs  patch_and_heads.rs  playback_boundary.rs  profile_visualization.rs  programmer_fades.rs  programmer_groups.rs  schema_v2.rs  snapshot_groups.rs
crates/engine/tests/: automatic_playback_transitions.rs
crates/fixture/: Cargo.toml
crates/fixture/src/: definition.rs  definition_model.rs  encoding.rs  error.rs  lib.rs  package.rs  patch.rs  patch_model.rs  patch_validation.rs  profile.rs
crates/fixture/src/package/: archive.rs  assets.rs  codec.rs  glb.rs  manifest.rs  tests.rs
crates/fixture/src/portable_patch/: codec.rs  compiler.rs  digest.rs  identity.rs  legacy.rs  merge.rs  mod.rs  model.rs
crates/output/: Cargo.toml
crates/output/src/: external.rs  frame.rs  health.rs  lib.rs  route.rs  scheduler.rs
crates/output/tests/: codec_characterization.rs  network_characterization.rs  route_characterization.rs  scheduler_characterization.rs
crates/programmer/: Cargo.toml
crates/programmer/src/: capture_mode.rs  command_choice.rs  command_line.rs  command_state.rs  cue_recording.rs  fixture_value_batch.rs  group_recording.rs  groups.rs  history.rs  lib.rs  lifecycle_projection.rs  normal_values.rs  preload.rs  preload_playback_queue.rs  preload_values.rs  preset_capture.rs  presets.rs  registry.rs  selection.rs  sessions.rs  state.rs  transactions.rs  update_capture.rs  values.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: command_http.rs  command_line.rs  cue_transfer.rs  default_show.rs  file_manager.rs  file_manager_support.rs  help.rs  highlight.rs  lib.rs  main.rs  matter.rs  runtime.rs  update.rs
crates/server/static/: index.html
crates/show/: Cargo.toml
crates/show/src/: connection.rs  error.rs  lib.rs  model.rs  show_store.rs
crates/wire/: Cargo.toml  README.md
crates/wire/examples/: generate-contracts.rs
crates/wire/src/: generation.rs  lib.rs
crates/wire/tests/: generated_contracts.rs
(+2392 files in other folders)
