[workspace]
resolver = "3"
members = [
  "apps/control-ui/src-tauri",
  "apps/hardware-controls/src-tauri",
  "crates/core",
  "crates/fixture",
  "crates/show",
  "crates/programmer",
  "crates/playback",
  "crates/output",
  "crates/control",
  "crates/engine",
  "crates/media",
  "crates/mvr",
  "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Light contributors"]

[workspace.dependencies]
anyhow = "1.0"
arc-swap = "1.7"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "macros", "multipart", "ws"] }
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rusqlite = { version = "0.37", features = ["bundled", "backup", "uuid"] }
rust-embed = "8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "net", "sync", "time", "signal", "fs", "io-util"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
midir = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
quick-xml = "0.38"
zip = { version = "4.6", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "forbid"
