[package]
name = "light-application"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
chrono.workspace = true
light-core = { path = "../core" }
light-engine = { path = "../engine", default-features = false }
light-fixture = { path = "../fixture" }
light-mvr = { path = "../mvr" }
light-output = { path = "../output" }
light-playback = { path = "../playback" }
light-programmer = { path = "../programmer" }
light-show = { path = "../show" }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
