[package]
name = "light-control"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native-midi"]
native-midi = ["dep:midir"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
light-core = { path = "../core" }
serde.workspace = true
tokio.workspace = true
midir = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
