[package]
name = "light-fixture"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
base64.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
light-core = { path = "../core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
zip.workspace = true
