[package]
name = "light-server"
default-run = "light-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native-midi"]
native-midi = ["light-control/native-midi", "light-engine/native-midi"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
light-core = { path = "../core" }
light-control = { path = "../control", default-features = false }
light-engine = { path = "../engine", default-features = false }
light-media = { path = "../media" }
light-fixture = { path = "../fixture" }
light-output = { path = "../output" }
light-playback = { path = "../playback" }
light-programmer = { path = "../programmer" }
light-show = { path = "../show" }
parking_lot.workspace = true
rusqlite.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tower.workspace = true
http-body-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
