[package]
name = "light-server"
default-run = "light-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["native-midi"]
native-midi = ["light-control/native-midi", "light-engine/native-midi"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
light-core = { path = "../core" }
light-control = { path = "../control", default-features = false }
light-engine = { path = "../engine", default-features = false }
light-media = { path = "../media" }
light-mvr = { path = "../mvr" }
light-fixture = { path = "../fixture" }
light-output = { path = "../output" }
light-playback = { path = "../playback" }
light-programmer = { path = "../programmer" }
light-show = { path = "../show" }
parking_lot.workspace = true
rusqlite.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["io"] }
tower-http.workspace = true
tower.workspace = true
http-body-util.workspace = true
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
async-io = "2"
embassy-futures = "0.1"
embassy-time-queue-utils = { version = "0.3", features = ["generic-queue-64"] }
futures-lite = "2"
if-addrs = "0.15"
rand = { version = "0.8", features = ["std", "std_rng"] }
rs-matter = { version = "0.2.0", features = ["async-io", "max-groups-per-fabric-12", "max-group-keys-per-fabric-2", "max-group-endpoints-per-fabric-3", "max-sessions-32"] }
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[target.'cfg(unix)'.dependencies]
xattr = "1.6"
