[package]
name = "light-show"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
light-core = { path = "../core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
