[package]
name = "light-hardware-controls"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
light-control = { path = "../../../crates/control" }
uuid.workspace = true

[lints]
workspace = true
